Most the functionality of the friends going list is implemented, there are still issues tho including but not limited to: - the header in teh add event page still disappears when adding a frind to the going list - if there is something in the going list and you reload the page it will not reset the going variable in the friends data

--- a/index.html
+++ b/index.html
@@ -87,11 +87,17 @@
             <label for="repeatingValue">Repeating? </label>
             <input type="checkbox" name="repeating" id="repeatingValue">
 
-            <label>Friends Going*: </label>
-            <article>
-                <ul id="add-event-friends-list"></ul>
-                <div class="Vdivider"></div>
-                <ul id="add-event-friends-going"></ul>
+            <label for="friendsGoing">Invite Friends: </label>
+            <article id="friendsGoing">
+                <div>
+                    <h2>Friends:</h2>
+                    <ul id="add-event-friends-list"></ul>
+                </div>
+                <span class="Vdivider"></span>
+                <div>
+                    <h2>Going:</h2>
+                    <ul id="add-event-friends-going"></ul>
+                </div>
             </article>
             
             <button id="event-edit-button">Save Event</button>
