Fixed the reloading bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="imgs/Logo192-White.png">
 </head>
 <!-- onload function here just preloads the event list when the page is loaded -->
-<body onload="loadEventList('upcoming')"> 
+<body onload="onLoad('upcoming')"> 
     
     <!-- MAIN -->
     
