Now friends going is displayed in the event view page as well

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
                 <label for="event-view-repeatingdays">Repeating Days (If Repeating)*: </label>
                 <p id="event-view-repeatingdays">e.g. Mon, Tue, Fri</p>
 
-                <label>Friends Going*: </label>
-                <ul>
-                    <li>Friend 2</li>
-                    <li>Friend 3</li>
+                <label>Friends Going: </label>
+                <ul id="view-friends-going">
+                    
                 </ul>
             </div>
 
