Made the 'Add Friend' button more obvious and intuitive and enlarged the edit and delete buttons in the list that displays your friends

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <article id="aside-headerbar">
                 <div>
                     <h2>Friends</h2>
-                    <button id="add-friend" onclick="addFriendPage()">+</button>
+                    <button id="add-friend" onclick="addFriendPage()">Add Friend</button>
                 </div>
                 <div>
                     <input type="search" name="searchFriends" id="friend-search-bar" placeholder="Search for Friend...">
