Finshed Visual Update, Includes: - Mostly colour changes - Finally remembered to css the search boxes - Fixed the friend sidebar menu thingy so it works and looks much better with lists of friends that are longer than the screen
Visuals will probably keep getting updated as the app develops tho i might forget to mention it in whatever comit it happens in

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <button id="event-edit-button">Save Event</button>
             <button id="event-edit-back-button" onclick="loadEventListPage()">Back</button>
 
-            <p>*Not Functional Yet</p>
+            <!-- <p>*Not Functional Yet</p> -->
         </section>
     </section>
 
