--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <article class="main-headerbar">
             <h1 id="edit-event-header">Add Event</h1>
             <button id="add-event" onclick="addEventPage()">Add Event</button>
-            <input type="search" name="searchEvents" id="event-search-bar" placeholder="Search for Event...">
-            <img id="search-icon" onclick="searchEvents()" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">
+            <input type="search" name="searchEvents" id="event-search" placeholder="Search for Event...">
+            <img id="search-icon" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">
             <img id="open-menu-icon" onclick="toggleSidebar()" src="imgs/MenuIcon50.png" alt="Cannot Find image" sizes="50x50">
         </article>
 
@@ -100,7 +100,7 @@
             </article>
             
             <button id="event-edit-button">Save Event</button>
-            <button id="event-edit-back-button" onclick="loadEventListPage()">Back</button>
+            <button id="event-edit-back-button" onclick="loadEventListPage()">Cancel</button>
 
             <!-- <p>*Not Functional Yet</p> -->
         </section>
