--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 id="edit-event-header">Add Event</h1>
             <button id="add-event" onclick="addEventPage()">Add Event</button>
             <input type="search" name="searchEvents" id="event-search" placeholder="Search for Event...">
-            <img id="search-icon" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">
+            <img id="event-search-icon" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">
             <img id="open-menu-icon" onclick="toggleSidebar()" src="imgs/MenuIcon50.png" alt="Cannot Find image" sizes="50x50">
         </article>
 
@@ -124,8 +124,8 @@
                     <button id="add-friend" onclick="addFriendPage()">Add Friend</button>
                 </div>
                 <div>
-                    <input type="search" name="searchFriends" id="friend-search-bar" placeholder="Search for Friend...">
-                    <img id="search-icon" onclick="searchFriends()" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">    
+                    <input type="search" name="searchFriends" id="friend-search" placeholder="Search for Friend...">
+                    <img id="friend-search-icon" src="imgs/SearchIcon.png" alt="Cannot Find image" sizes="50x50">    
                 </div>
             </article>
             <div class="Hdivider"></div>
