Finished basic html layout and cssing of repeating feature

--- a/index.html
+++ b/index.html
@@ -89,32 +89,32 @@
 
             <div id="repeating-event-toggle-weekdays">
                 <div>
-                    <label for="mondayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="mondayValue" onclick="repeatingEventToggle()">    
+                    <label for="mondayValue">Monday</label>
+                    <input type="checkbox" name="monday" id="mondayValue">    
                 </div>
                 <div>
-                    <label for="tuesdayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="tuesdayValue" onclick="repeatingEventToggle()">    
+                    <label for="tuesdayValue">Tuesday</label>
+                    <input type="checkbox" name="tuesday" id="tuesdayValue">    
                 </div>
                 <div>
-                    <label for="wednesdayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="wednesdayValue" onclick="repeatingEventToggle()">    
+                    <label for="wednesdayValue">Wednesday</label>
+                    <input type="checkbox" name="wednesday" id="wednesdayValue">    
                 </div>
                 <div>
-                    <label for="thursdayValue">Repeating? </label>
-                    <input type="friday" name="repeating" id="thursdayValue" onclick="repeatingEventToggle()">    
+                    <label for="thursdayValue">Thursday</label>
+                    <input type="checkbox" name="thursday" id="thursdayValue">    
                 </div>
                 <div>
-                    <label for="fridayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="fridayValue" onclick="repeatingEventToggle()">    
+                    <label for="fridayValue">Friday</label>
+                    <input type="checkbox" name="friday" id="fridayValue">    
                 </div>
                 <div>
-                    <label for="saturdayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="saturdayValue" onclick="repeatingEventToggle()">    
+                    <label for="saturdayValue">Saturday</label>
+                    <input type="checkbox" name="saturday" id="saturdayValue">    
                 </div>
                 <div>
-                    <label for="sundayValue">Repeating? </label>
-                    <input type="checkbox" name="repeating" id="sundayValue" onclick="repeatingEventToggle()">    
+                    <label for="sundayValue">Sunday</label>
+                    <input type="checkbox" name="sunday" id="sundayValue">    
                 </div>
             </div>
 
