Progress on the repeating feature, finished most of the javascript now just need to test it all and iron out any bugs

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <label for="event-view-repeating">Repeating: </label>
                 <p id="event-view-repeating"></p>
                 
-                <label for="event-view-repeatingdays">Repeating Days (If Repeating)*: </label>
-                <p id="event-view-repeatingdays">e.g. Mon, Tue, Fri</p>
+                <label for="event-view-repeatingdays">Repeating Days</label>
+                <p id="event-view-repeatingdays"></p>
 
                 <label>Friends Going: </label>
                 <ul id="view-friends-going">
